Update title and headings for defense schedule

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Rozpis maturit – 2 dny</title>
+  <title>Rozpis obhajob</title>
   <style>
     :root{
       --bg:#f6f7fb;
@@ -408,14 +408,14 @@
 <body>
 <header>
   <div class="wrap">
-    <h1>Rozpis maturit</h1>
+    <h1>Rozpis obhajob maturitních prací</h1>
   </div>
 </header>
 
 <main>
   <div class="topbar">
     <button id="btnPasteToInput" class="primary">Vložit tabulku ze schránky</button>
-    <button id="btnBuild" class="secondary">Vytvořit zásobník</button>
+    <button id="btnBuild" class="secondary">Vytvořit kartičky</button>
 
     <button id="btnQuickSave" class="good" disabled>Uložit rychle</button>
     <button id="btnQuickLoad" class="secondary" disabled>Načíst rychle</button>
