Rename pool titles from 'Zásobník' to 'Kartičky'

--- a/index.html
+++ b/index.html
@@ -890,8 +890,8 @@
     listAM_B.setAttribute("data-schedule", state.classB || "");
     listPM_B.setAttribute("data-schedule", state.classB || "");
 
-    poolTitleA.textContent = `Zásobník – ${state.classA || "—"}`;
-    poolTitleB.textContent = `Zásobník – ${state.classB || "—"}`;
+    poolTitleA.textContent = `Kartičky – ${state.classA || "—"}`;
+    poolTitleB.textContent = `Kartičky – ${state.classB || "—"}`;
     schedAMTitleA.textContent = `AM – ${state.classA || "—"}`;
     schedPMTitleA.textContent = `PM – ${state.classA || "—"}`;
     schedAMTitleB.textContent = `AM – ${state.classB || "—"}`;
